observed/ing-sidecar-cl2.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: envoy-thanos-gateway
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/grpc-backend: 'true'
    nginx.ingress.kubernetes.io/protocol: h2c
    nginx.ingress.kubernetes.io/proxy-read-timeout: '160'
spec:
  tls:
  - hosts:
    - cl2m.example.come
    secretName: envoy
  rules:
  - host: cl2m.example.come
    http:
      paths:
      - backend:
          service:
            name: prom-kube-prometheus-prometheus-thanos
            port:
              name: grpc
        path: /
        pathType: ImplementationSpecific
